feat (frontend): adding Tailwindcss library and necessary configuration changes

--- a/portfolio/main_page/templates/main_page.html
+++ b/portfolio/main_page/templates/main_page.html
@@ -1,5 +1,5 @@
 {% include "C:/Users/agust/portfolioAFernandez/portfolio/portfolio/templates/base_header.html" %}
 
-<h1>Main page</h1>
+<h1 class="font-bold text-8xl">Main page</h1>
 
 {% include "C:/Users/agust/portfolioAFernandez/portfolio/portfolio/templates/base_footer.html" %}
