--- a/portfolio/portfolio/templates/base_header.html
+++ b/portfolio/portfolio/templates/base_header.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio | Agustin Fernandez</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'C:/Users/agust/portfolioAFernandez/portfolio\static/css/tailwind.css' %}">
+
 </head>
 <body>
-    <header>this is the hd</header>
+    <header >this is the hd</header>
