--- a/portfolio/main_page/templates/main_page.html
+++ b/portfolio/main_page/templates/main_page.html
@@ -1,11 +1,19 @@
 {% include "C:/Users/agust/portfolioAFernandez/portfolio/portfolio/templates/base_header.html" %}
 
-<main>
-    <div class="p-10">
+<main id="about-me">
+
+    <div id="firstBlockAboutMe">
         <h1 class="text-2xl">Agustin Fernandez</h1>
         <h2 class="text-xl">Computer Science student</h2>
     </div>
-    
+
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, sed! Iusto esse reiciendis eveniet labore 
+            consequatur soluta vitae autem unde dicta quis. Dolorum fuga tempore mollitia, ut eos est sit.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem suscipit ad eaque fuga, autem voluptas officiis itaque cumque earum 
+        reprehenderit quam corrupti numquam odio distinctio temporibus doloribus qui cum obcaecati.</p>
+    </div>
+
 </main>
 
 
