--- a/portfolio/portfolio/templates/base_header.html
+++ b/portfolio/portfolio/templates/base_header.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio | Agustin Fernandez</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'C:/Users/agust/portfolioAFernandez/portfolio\static/css/tailwind.css' %}">
+    <link rel="stylesheet" href="{% static 'css/tailwind.css' %}">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,12 +14,15 @@
 
 </head>
 <body>
-    <header class="d-flex bg-primary">
-        <ul>
-            <li><img src="/static/img/monoLogo.png" alt="Logo"></li>
-            <li>Curriculum</li>
-            <li>Linkedin</li>
-            <li>Proyects</li>
-        </ul>
+    <header>
+        <nav>
+
+            <ul>
+                <li><img src="/static/img/monoLogo.png" alt="Logo"></li>
+                <li><a href="">Linkedin</a></li>
+                <li><a href="">Proyects</a></li>
+                <li><a href="">About me</a></li>
+            </ul>
+        </nav>
     
     </header>
