--- a/portfolio/portfolio/templates/base_header.html
+++ b/portfolio/portfolio/templates/base_header.html
@@ -12,8 +12,13 @@
 <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;600;900&display=swap" rel="stylesheet">
 <link rel="icon" href="{% static 'img/monoLogoIcono.ico' %}" type="image/x-icon">
 
+
+<script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <a href="https://api.whatsapp.com/send?phone=+5493518186658" class="btn-wsp" target="_blank">
+	    <i class="fa fa-whatsapp icono"></i>
+	</a>
     <header>
         <nav>
 
